@@ -1,6 +1,0 @@
-
-This application provides UNIX style memory free information.
-
-	Source: NuttX
-	Author: Gregory Nutt <gnutt@nuttx.org>
-	Date: 17. March 2011
