@@ -1,7 +1,0 @@
-
-This application provides RAMTRON tool/lib to start, stop or to perform
-RAMTRON custom operations.
-
-	Source: NuttX
-	Author: Uros Platise
-	Date: 18. March 2011
