@@ -1,7 +1,0 @@
-
-This application provides SDcard tool/lib to start, stop, eject or insert
-a memory card.
-
-	Source: NuttX
-	Author: Uros Platise
-	Date: 18. March 2011
