@@ -1,6 +1,0 @@
-
-This application provides access to System Information
-
-	Source: NuttX
-	Date: 15. April 2011
-    Author: Uros Platise <uros.platise@isotel.eu>
