@@ -278,13 +278,7 @@
  |   |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/NxWidgets/README.txt"><b><i>README.txt</i></b></a>
  |   `- system/
  |       |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/i2c/README.txt"><b><i>i2c/README.txt</i></b></a>
- |       |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/free/README.txt">free/README.txt</a>
- |       |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/install/README.txt">install/README.txt</a>
- |       |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/poweroff/README.txt">poweroff/README.txt</a>
- |       |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/ramtron/README.txt">ramtron/README.txt</a>
- |       |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/sdcard/README.txt">sdcard/README.txt</a>
- |       |- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/sysinfo/README.txt">sysinfo/README.txt</a>
- |       `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/sdcard/README.txt"><b><i>README.txt</i></b></a>
+ |       `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/apps/system/install/README.txt">install/README.txt</a>
  `- NxWidgets
      |- Doxygen
      |   `- <a href="http://svn.code.sf.net/p/nuttx/code/trunk/NxWidgets/Doxygen/README.txt"><b><i>README.txt</i></b></a>
